<resources>
    <string name="app_name">VST</string>

    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="vitamin_stack_tracker">Vitamin Stack Tracker</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="cancel">cancel</string>
    <string name="admin">admin</string>
    <string name="admin_area">Admin Panel</string>
    <string name="logout">logout</string>
    <string name="register">Register</string>
    <string name="register_account">Register Account</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="admin_controls">Admin Controls</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_user">Delete User</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>
    <string name="delete_user_account">Delete Account</string>
    <string name="confirm_username">Confirm Username</string>
    <string name="add_vitamin">Add Vitamin</string>
    <string name="vitamin_name">Vitamin Name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="time_prompt">Time</string>
    <string name="submit">Submit</string>
    <string name="vitamin_stack">Vitamin Stack</string>
    <string name="back">Back</string>
    <string name="edit_vitamin">Edit Vitamin</string>
    <string name="morning">Morning</string>
    <string name="name">Name</string>
    <string name="filters">Filters</string>
    <string name="take_vitamins">Take Vitamins</string>
    <string name="drink_water">Drink Water</string>
    <string name="reset_water">Reset Water</string>
    <string-array name="time_options">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
    </string-array>
</resources>