<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/logo"
    tools:context="nathan.csumb.vst.AddVitaminActivity">

    <TextView
        android:id="@+id/vitaminView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/add_vitamin"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="#FFFFFF"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vitaminView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/vitamin_name"
            android:inputType="text"
            android:elevation="2dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="#FFFFFF"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/description"
            android:inputType="text"
            android:elevation="2dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantityInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="#FFFFFF"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/quantity"
            android:inputType="number"
            android:elevation="2dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="#FFFFFF"
        android:background="@color/white"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityInputLayout">

        <Spinner
            android:id="@+id/timeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/time_prompt"
            android:entries="@array/time_options" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="176dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/indigo"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/timeInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="174dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/indigo"
        android:elevation="2dp"
        android:fontFamily="sans-serif"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

