<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/logo"
    tools:context="nathan.csumb.vst.LoginActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userNameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="#FFFFFF"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/username"
            android:inputType="text"
            android:elevation="2dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="#FFFFFF"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:elevation="2dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="176dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/indigo"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="174dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/indigo"
        android:elevation="2dp"
        android:fontFamily="sans-serif"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>