<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/filterTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/filters"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nameQtyFilterButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/indigo"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="Name ⬇️"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/timeFilterButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/timeFilterButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/indigo"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/morning"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/backButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameQtyFilterButton"
        app:layout_constraintTop_toBottomOf="@+id/filterTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/indigo"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTextView" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/vitamin_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
